[package]
name = "pictrait_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql = { path = "graphql" }
server = { path = "./server" }
tokio = { version = "1.15.0", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"

[workspace]
members = ["graphql", "graphql-schema", "server"]